# filippa

./: APIREADME.txt  README.md  filippa.py  pyproject.toml
docs/: CHANGELOG.md  README.md
docs/ai/: README.md  debug.md  emoji_use.md  start.md
docs/api/: README.md  bot.md
docs/ux/: README.md  names.md
filippa-api/: __init__.py
filippa_api/: __init__.py
meta/: __init__.py
